2005-12-16  Guillaume Bedot <littletux@zarb.org>
- First attempt to make a gphoto2 driver for the LG T5100